<resources>
    <string name="app_name">SaladMixer</string>
    <string name="new_salad_button">NEW SALAD</string>
    <string name="add_new_ingredient_button">ADD NEW INGREDIENT</string>
    <string name="browse_saved_entries_button">BROWSE SALADS</string>
    <string name="save_button">SAVE</string>
    <string name="view_button">VIEW</string>
    <string name="content_description_main_image">Image of salad</string>
    <string name="salad_name" translatable="false">" "</string>
    <string name="browse_ingredient_button">BROWSE INGREDIENTS</string>
    <string name="ingredient_name_input">Enter a name</string>
    <string name="title_name">NAME</string>
    <string name="title_energy">CALORIES</string>
    <string name="hint_0" translatable="false">0</string>
    <string name="title_kcal" translatable="false">kcal</string>
    <string name="title_weight">WEIGHT</string>
    <string name="title_grams" translatable="false">g</string>
    <string name="title_fat">FAT</string>
    <string name="title_fat_saturated">OF WHICH SATURATED</string>
    <string name="title_carbohydrates">CARBOHYDRATES</string>
    <string name="title_carbo_sugars">OF WHICH SUGARS</string>
    <string name="title_fiber">DIETARY FIBER</string>
    <string name="title_protein">PROTEIN</string>
    <string name="title_salt">SALT</string>
    <string name="button_add_new_ingredient">SAVE</string>
    <string name="alert_message_no_name">Please enter name and weight!</string>
    <string name="alert_dialog_title">Alert</string>
    <string name="alert_message_wrong_weight">Weight needs to be more than zero!</string>
    <string name="button_import_defaults">IMPORT DEFAULTS</string>
    <string name="alert_message_add_success">Ingredient was added succesfully.</string>
    <string name="alert_message_wrong_sugars">Sugars need to be lower or equal to carbohydrate</string>
    <string name="alert_message_wrong_fat">Saturated fat needs to be lower or equal to fat</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="alert_message_wrong_password_format">Password needs to be atleast 8 characters and contain 1 lowercase letter, 1 uppercase letter and 1 number character</string>
    <string name="alert_message_email_length">Input a valid email address</string>
    <string name="alert_message_register_error">User already exists or email is in invalid format</string>
    <string name="alert_message_login_error">Login failed: Wrong credentials or email is in incorrect format</string>
    <string name="button_logout">Log out</string>
    <string name="button_forgot_password">Forgot password</string>
    <string name="alert_message_forgot_password">Password reset link sent to provided email address if account exists</string>
    <string name="alert_message_defaults_imported">Default ingredients succesfully imported</string>
    <string name="button_remove">Remove</string>
    <string name="title_others">Others</string>
    <string name="title_fat_chart">Other fat</string>
    <string name="title_fat_saturated_chart">Saturated Fat</string>
    <string name="title_carbo_sugars_chart">Sugars</string>
    <string name="title_carbo_other_chart">Other carbohydrates</string>
    <string name="title_fiber_chart">Dietary fiber</string>
    <string name="title_protein_chart">Protein</string>
    <string name="title_salt_chart">Salt</string>
    <string name="title_nutrients_chart">Nutrients (per 100g)</string>
    <string name="title_energy_chart">"Calories: "</string>
    <string name="button_view_ingredient">VIEW</string>
    <string name="alert_message_confirm_removal_yes">Yes</string>
    <string name="title_salad_nutriens_chart">Nutrients (per 100g ingredient)</string>
    <string name="alert_message_total_weight">Total weight of ingredients can\'t be higher than given weight</string>
</resources>
